<resources>
    <string name="app_name">Agino</string>
    <string name="welcome_to_agino">Welcome to Agino</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id pellentesque nulla. Donec porta pretium risus vitae ultrices.</string>
    <string name="create_my_first_farm">create my first farm</string>
    <string name="enter_farm_name">Enter farm name</string>
    <string name="farm_name">Farm Name</string>
    <string name="search_location">Search location</string>
    <string name="location">Location</string>
    <string name="create_new_farm">Create New Farm</string>

    <!-- OnBoarding 1-->
    <string name="fragment_onboarding_1_slide_1_title">Smart Farming</string>
    <string name="fragment_onboarding_1_slide_1_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id pellentesque nulla. Donec porta pretium risus vitae ultrices. </string>
    <string name="fragment_onboarding_1_slide_2_title">Smart Farming</string>
    <string name="fragment_onboarding_1_slide_2_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id pellentesque nulla. Donec porta pretium risus vitae ultrices. </string>
    <string name="fragment_onboarding_1_slide_3_title">Smart Farming</string>
    <string name="fragment_onboarding_1_slide_3_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id pellentesque nulla. Donec porta pretium risus vitae ultrices. </string>
    <string name="fragment_onboarding1_sign_up_with_agino">sign up with agino</string>
    <string name="fragment_onboarding1_already_have_an_account">Already have an account?</string>
    <string name="fragment_onboarding1_log_in">Log In</string>
    <string name="add_a_field">Add a field</string>
    <string name="add_my_first_field">Add my first field</string>
    <string name="field_name">Field Name</string>
    <string name="enter_field_name">Enter field name</string>
    <string name="altitude_above_sea_level">Altitude Above Sea Level</string>
    <string name="enter_in_meters">Enter in meters</string>
    <string name="create_new_field">Create New Field</string>
    <string name="fragment_onboarding2_terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="fragment_onboarding2_agree_to_terms_amp_conditions_btn"><![CDATA[AGREE TO TERMS & CONDITIONS]]></string>
    <string name="fragment_onboarding2_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id pellentesque nulla. Donec porta pretium risus vitae ultrices. Proin a eros id neque placerat feugiat tincidunt et ipsum. Praesent ut nisi ipsum. Praesent sed lectus mauris. Integer ullamcorper enim ac odio placerat mollis. Donec eu justo fermentum, varius erat a, accumsan dui. Praesent iaculis blandit neque vitae fermentum. Vivamus elit turpis, tincidunt vel justo semper, rutrum luctus ipsum. Ut a massa eu lorem malesuada aliquam ut id sem. Duis eu mollis eros. Mauris in ante vel magna eleifend scelerisque. Proin posuere ex eu porttitor ornare. Donec congue et nulla nec tincidunt. Fusce urna sapien, semper vel nulla sed, viverra imperdiet sapien. Phasellus rhoncus dolor vel blandit eleifend. Integer et rutrum ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut commodo, nisl quis efficitur tristique, lorem metus commodo erat, a porta massa magna ut risus. Ut congue quam odio, ut tempus nibh maximus at. Integer laoreet sem neque, vel lobortis sapien aliquam eget. Phasellus non magna et elit porttitor vehicula sit amet at nisl. Quisque facilisis placerat commodo. Maecenas interdum, libero pharetra blandit pharetra, urna mauris fermentum lorem, eget mollis velit felis id dolor. Donec eu laoreet diam. Aliquam sed purus id urna convallis mollis non vestibulum libero. Fusce aliquet, turpis eu ultricies bibendum, enim mi mattis enim, eu laoreet nunc tellus quis enim. Ut faucibus convallis tortor sed viverra. Aenean facilisis, sem a convallis blandit, massa ante volutpat velit, sit amet consequat ante leo et leo. Vivamus consectetur bibendum metus nec iaculis. Vivamus eget nibh nunc.</string>
    <string name="fragment_phone_number_title">Sign up</string>
    <string name="fragment_phone_number_signup_header">Sign up with your phone number</string>
    <string name="fragment_phone_number_signup_phone_number_hint">Enter your phone number</string>
    <string name="fragment_phone_number_signup_continue_btn">continue</string>
    <string name="fragment_verification_code_hint">Enter your verification code</string>
    <string name="fragment_verification_code_header">Verification Code</string>
    <string name="fragment_reset_sensor_header">Previous reset days</string>
    <string name="fragment_reset_sensor_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Molestie fermentum, egestas in a consequat volutpat.</string>
    <string name="fragment_reset_sensor_reset_day_hint">Select reset day</string>
    <string name="fragment_reset_sensor_reset_from">Reset from</string>
    <string name="fragment_reset_sensor_title">RESET GDD</string>
    <string name="fragment_reset_sensor_btn_label">Reset GDD</string>
    <string name="fragment_add_first_sensor_header">Add a sensor</string>
    <string name="fragment_add_first_sensor_description">A field can have multiple sensors, but needs at least one to calculate the GDD and ideal cutting day. Add your first sensor to get started.</string>
    <string name="fragment_add_first_sensor_btn">ADD my first SENSOR</string>


    <string name="fragment_profile_title">Profile</string>
    <string name="fragment_profile_phone">Phone</string>
    <string name="fragment_profile_sample_phone">+ 47 384 943 38</string>

    <string name="fragment_add_new_sensor_btn_label">Add new Sensor</string>
    <string name="fragment_add_new_sensor_serial_number_label">Serial Number</string>
    <string name="fragment_add_new_sensor_serial_number_hint">Scan or enter serial number</string>
    <string name="fragment_add_new_sensor_sensor_location_label">Sensor Location</string>
    <string name="fragment_add_new_sensor_default_ggd_label">Default GGD</string>
    <string name="fragment_add_new_sensor_default_ggd_hint">Enter default GGD</string>
    <string name="fragment_add_new_sensor_sensor_installation_date_label">Sensor Installation Date</string>
    <string name="fragment_add_new_sensor_select_installation_date_hint">Select installation date</string>
    <string name="fragment_add_new_sensor_last_cutting_date_label">Last Cutting Date At This Field</string>
    <string name="fragment_add_new_sensor_last_cutting_date_hint">Select last cutting date</string>
    <string name="fragment_add_new_sensor_map_guide">Locate the sensor on the field by moving the pin around</string>


    <string name="fragment_help_title">Help</string>
    <string name="fragment_signin_title">Sign In</string>
    <string name="fragment_signin_header">Sign in with your phone number</string>

    <string name="_127m_above_sea_level">127m above sea level</string>
    <string name="to_cutting">To Cutting</string>
    <string name="goal_gdd">Goal GDD</string>
    <string name="current_gdd">Current GDD</string>
    <string name="days">days</string>
    <string name="add_new_sensor">Add new sensor</string>
    <string name="sensors">Sensors</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="statistics">Statistics</string>
    <string name="period">Period</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="choose_a_period">Choose a period</string>
    <string name="fragment_verification_code_resend_btn_label">Resend Code</string>
    <string name="reset_gdd_on_all_sensors">Reset GDD on all sensors</string>
    <string name="edit_field">Edit field</string>
    <string name="delete_field">Delete field</string>
    <string name="reset_gdd">Reset GDD</string>
    <string name="edit_sensor">Edit sensor</string>
    <string name="delete_sensor">Delete Sensor</string>
    <string name="no_sensors_yet">No Sensors Yet</string>
</resources>