<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.enterprise.agino.ui.first_time.field.NewFieldViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/grey_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/field_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/field_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_name_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/field_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/farm_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_field_name"
                android:inputType="text"
                android:text="@={viewModel.fieldName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/altitude_above_sea_level"
            app:layout_constraintTop_toBottomOf="@id/field_name_input_layout"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/altitude_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/location_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/altitude_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_in_meters"
                android:inputType="text"
                android:text="@={viewModel.altitude}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/button_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:outlineProvider="bounds"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_field_button"
                style="@style/SolidButton"
                android:text="@string/create_new_field"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginVertical="13dp"
                android:layout_marginHorizontal="30dp"
                android:enabled="@{viewModel.isAddFieldButtonEnabled() &amp;&amp; !viewModel.isLoading}"
                android:visibility="@{viewModel.isLoading ? View.INVISIBLE : View.VISIBLE}"
                android:onClick="@{() -> viewModel.submitForm()}" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/button_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_holder"
            app:layout_constraintTop_toTopOf="@+id/button_holder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>