<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alabaster">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="203dp"
            android:layout_height="203dp"
            android:layout_marginTop="150dp"
            android:importantForAccessibility="no"
            android:src="@drawable/first_time_user_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/welcome_to_agino"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_farm_button"
            style="@style/SolidButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/create_my_first_farm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>